final verse commit is correct, and fourth verse looks OK

--- a/poem.rmd
+++ b/poem.rmd
@@ -88,3 +88,42 @@ After the day was done —
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+Alas, that June should come when thou didst go;
+
+
+I think you passed each other on the way;
+
+
+And seeing thee, the Summer loved thee so
+
+
+That all her loveliness she gave away;
+
+
+Her rare perfumes, in hawthorn boughs distilled,
+
+
+Blushing, she in thy sweeter bosom left,
+
+
+Thine arms with all her virgin roses filled,
+
+
+Beggared herself of morning for thine eyes,
+
+
+Hung on the lips of every bird the tune,
+
+
+Breathed on thy cheek her soft vermilion dyes,
+
+
+And in thee set the singing heart of June.
+
+
+And so, not only do I mourn thy flight,
+
+
+But Summer comes despoiled of her delight.
+
+
